# pygpuNUFFT

./: .gitignore  CMakeLists.txt  README.md  save_times.npy  setup.py
.github/workflows/: cd-build.yml  ci-build.yml
.history/: setup_20220203145833.py  setup_20220204165259.py
.history/CUDA/inc/: gpuNUFFT_types_20220203153147.hpp  gpuNUFFT_types_20220203153150.hpp  gpuNUFFT_types_20220203153154.hpp  gpuNUFFT_types_20220203153204.hpp  gpuNUFFT_types_20220203153301.hpp  gpuNUFFT_types_20220203153303.hpp  gpuNUFFT_types_20220203153305.hpp  gpuNUFFT_types_20220203153310.hpp  gpuNUFFT_types_20220203153329.hpp  gpuNUFFT_types_20220203153516.hpp  gpuNUFFT_types_20220203153517.hpp  gpuNUFFT_types_20220203153518.hpp  gpuNUFFT_types_20220203153639.hpp  gpuNUFFT_types_20220203153701.hpp  gpuNUFFT_types_20220203153704.hpp  gpuNUFFT_types_20220203153801.hpp  gpuNUFFT_types_20220203153803.hpp  (+10 more)
.history/python/: CMakeLists_20220203150429.txt  CMakeLists_20220204161921.txt  CMakeLists_20220204162005.txt  CMakeLists_20220204162006.txt  CMakeLists_20220204163055.txt  CMakeLists_20220204163127.txt  CMakeLists_20220204163131.txt  CMakeLists_20220204164118.txt
.history/tests/: test_fastsum_20220203150625.py  test_fastsum_20220203150914.py  test_fastsum_20220203150917.py  test_fastsum_20220203150920.py  test_fastsum_20220203150921.py  test_fastsum_20220203150931.py  test_fastsum_20220203150942.py  test_fastsum_20220203150944.py  test_fastsum_20220203150949.py  test_fastsum_20220203150950.py  test_fastsum_20220203150954.py  test_fastsum_20220203150957.py  test_fastsum_20220203150959.py  test_fastsum_20220203151009.py  test_fastsum_20220203151012.py  test_fastsum_20220203151013.py  test_fastsum_20220203151014.py  test_fastsum_20220203151016.py  test_fastsum_20220203151021.py  test_fastsum_20220203151026.py  test_fastsum_20220203151028.py  test_fastsum_20220203151034.py  test_fastsum_20220203151041.py  test_fastsum_20220203151046.py  test_fastsum_20220203151056.py  test_fastsum_20220203151059.py  test_fastsum_20220203151113.py  test_fastsum_20220203151115.py  test_fastsum_20220203151117.py  test_fastsum_20220203151124.py  test_fastsum_20220203151125.py  test_fastsum_20220203151126.py  test_fastsum_20220203151131.py  test_fastsum_20220203151132.py  test_fastsum_20220203151133.py  test_fastsum_20220203151135.py  test_fastsum_20220203151141.py  test_fastsum_20220203151143.py  test_fastsum_20220203151145.py  test_fastsum_20220203151151.py  (+70 more)
CUDA/: CMakeLists.txt
CUDA/doc/: mainpage.dox
CUDA/fastsum/: CMakeLists.txt
CUDA/fastsum/inc/: config.h  fastsum.h  fastsum.hpp  kernels.h  ticks.h
CUDA/fastsum/src/: fastsum.c  fastsum.cpp  fastsum_test.c  kernels.c
CUDA/inc/: balanced_gpuNUFFT_operator.hpp  balanced_texture_gpuNUFFT_operator.hpp  config.hpp.cmake  cuda_utils.hpp  gpuNUFFT_kernels.hpp  gpuNUFFT_operator.hpp  gpuNUFFT_operator_factory.hpp  gpuNUFFT_utils.hpp  texture_gpuNUFFT_operator.hpp
CUDA/src/: CMakeLists.txt  balanced_texture_gpuNUFFT_operator.cpp  gpuNUFFT_operator.cpp  gpuNUFFT_operator_factory.cpp
CUDA/src/gpu/: CMakeLists.txt  atomic_gpuNUFFT_kernels.cu  precomp_kernels.cu  std_gpuNUFFT_kernels.cu  texture_gpuNUFFT_kernels.cu
CUDA/test/: CMakeLists.txt
CUDA/test/gpu/: gpuNUFFT_conv_tests.cpp  gpuNUFFT_deapo_tests.cpp
CUDA/test/gpu/forward/: gpuNUFFT_forward_tests.cpp
doc/: CMakeLists.txt  Doxyfile
docs/: README_8md.html  annotated.html  annotated_dup.js  atomic__gpuNUFFT_8cu.html  atomic__gpuNUFFT__kernels_8cu.html  balanced__gpuNUFFT__operator_8cpp.html  balanced__gpuNUFFT__operator_8cpp__incl.map  balanced__gpuNUFFT__operator_8cpp__incl.md5  balanced__gpuNUFFT__operator_8hpp.html  balanced__gpuNUFFT__operator_8hpp__dep__incl.map  balanced__gpuNUFFT__operator_8hpp__dep__incl.md5  balanced__gpuNUFFT__operator_8hpp__incl.map  balanced__gpuNUFFT__operator_8hpp__incl.md5  balanced__gpuNUFFT__operator_8hpp_source.html  balanced__operator_8hpp.html  balanced__operator_8hpp__dep__incl.map  balanced__operator_8hpp__dep__incl.md5  balanced__operator_8hpp__incl.map  balanced__operator_8hpp__incl.md5  balanced__operator_8hpp_source.html  balanced__texture__gpuNUFFT__operator_8cpp.html  balanced__texture__gpuNUFFT__operator_8cpp__incl.map  balanced__texture__gpuNUFFT__operator_8cpp__incl.md5  balanced__texture__gpuNUFFT__operator_8hpp.html  balanced__texture__gpuNUFFT__operator_8hpp__dep__incl.map  balanced__texture__gpuNUFFT__operator_8hpp__dep__incl.md5  balanced__texture__gpuNUFFT__operator_8hpp__incl.map  balanced__texture__gpuNUFFT__operator_8hpp__incl.md5  balanced__texture__gpuNUFFT__operator_8hpp_source.html  classGpuNUFFTPythonOperator-members.html  classGpuNUFFTPythonOperator.html  classGpuNUFFTPythonOperator.js  classGpuNUFFTPythonOperator__coll__graph.map  classGpuNUFFTPythonOperator__coll__graph.md5  classGpuNUFFTPythonOperator_a10bcd0d453fef0947c00cb4448398d3b_cgraph.map  classGpuNUFFTPythonOperator_a10bcd0d453fef0947c00cb4448398d3b_cgraph.md5  classGpuNUFFTPythonOperator_a47e427fafc08d705d834940e1229742f_cgraph.map  classGpuNUFFTPythonOperator_a47e427fafc08d705d834940e1229742f_cgraph.md5  classGpuNUFFTPythonOperator_a47e427fafc08d705d834940e1229742f_icgraph.map  classGpuNUFFTPythonOperator_a47e427fafc08d705d834940e1229742f_icgraph.md5  (+739 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+44 more)
python/: CMakeLists.txt  gpuNUFFT_operator_python_factory.cpp
python/inc/: batch_factory.hpp  fastsum_binder.hpp  python_factory.hpp  python_utils.hpp
python/src/: batch_factory.cpp  fastsum_binder.cpp  python_bindings.cpp  python_factory.cpp
tests/: test_bench.py  test_density_comp.py  test_fastsum.py  test_power_method.py
(+740 files in other folders)
